language/move-lang/tests/move_check/expansion/use_spec_function_as_normal_function.exp
error: 

    ┌── tests/move_check/expansion/use_spec_function_as_normal_function.move:12:9 ───
    │
 12 │         foo();
    │         ^^^ Invalid module access. Unbound function 'foo' in module '0x1::X'
    │

error: 

    ┌── tests/move_check/expansion/use_spec_function_as_normal_function.move:13:9 ───
    │
 13 │         baz();
    │         ^^^ Invalid module access. Unbound function 'bar' in module '0x1::X'
    │

